dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/expand.h)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(EXP, 3.99)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_F77
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AM_PROG_LIBTOOL

dnl Arguments

AC_ARG_ENABLE(seqcheck,
    [  --enable-seqcheck        add code to check particle sequence on repartition],
    enable_seqcheck=yes,
    enable_seqcheck=no)

AC_ARG_ENABLE(debug,
    [  --enable-debug                  compile with verbose output and debugging flags],
    enable_debug=yes,
    enable_debug=no)

AC_ARG_ENABLE(dmalloc,
    [  --enable-dmalloc                link in the dmalloc package for memory debugging],
    enable_dmalloc=yes,
    enable_dmalloc=no)


dnl Look for doxygen
AC_PATH_PROG(DOXYGEN, doxygen, notfound)
AM_CONDITIONAL(DOXYGEN_FOUND, test x$DOXYGEN != xnotfound)

dnl Checks for libraries.
dnl Replace 'main' with a function in -largs:
AC_CHECK_LIB(args, main)
dnl Replace 'main' with a function in -leigen:
AC_CHECK_LIB(eigen, main)
dnl Replace 'main' with a function in -lfft:
AC_CHECK_LIB(fft, main)
dnl Replace 'main' with a function in -lm:
AC_CHECK_LIB(m, main)
dnl Replace 'main' with a function in -lmpi:
AC_CHECK_LIB(mpi, main)
dnl Replace 'main' with a function in -lexputil:
AC_CHECK_LIB(exputil, main)
dnl Replace 'main' with a function in -lpthread:
AC_CHECK_LIB(pthread, main)
dnl Replace 'main' with a function in -lsrnd:
AC_CHECK_LIB(srnd, main)
dnl Replace 'main' with a function in -lstdc:
AC_CHECK_LIB(stdc, main)
dnl Replace 'main' with a function in -lt:
AC_CHECK_LIB(t, main)
dnl Replace 'main' with a function in -ltrillium:
AC_CHECK_LIB(trillium, main)
dnl Replace 'main' with a function in -ltstdio:
AC_CHECK_LIB(tstdio, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(malloc.h unistd.h mpi.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE

dnl Set variables for Makefile
AM_CONDITIONAL(ENABLE_SEQCHECK, test "$enable_seqcheck" = "yes")
AM_CONDITIONAL(ENABLE_DEBUG, test "$enable_debug" = "yes")
AM_CONDITIONAL(ENABLE_DMALLOC, test "$enable_dmalloc" = "yes")


dnl Make the makefiles
AC_OUTPUT(expgnu/Makefile exputil/Makefile src/Makefile Makefile doc/Makefile src/user/Makefile utils/Makefile utils/PhaseSpace/Makefile utils/SL/Makefile)

