dnl Process this file with autoconf to produce a configure script.
AC_INIT(EXP, 5.5)
AC_CONFIG_HEADERS(config.h)
AC_CONFIG_SRCDIR(src/expand.cc)
AM_INIT_AUTOMAKE

AC_DEFINE([NEED_MAIN], 1, [Define if a function `main' is needed.])


dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC(mpicc gcc cc)
AC_PROG_F77(mpif77 mpiF77 g77 f77)
AC_PROG_CPP
AC_PROG_CXX(mpic++ mpiCC g++ CC)
AC_PROG_CXXCPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_LIBTOOL

dnl Arguments

AC_ARG_ENABLE(seqcheck,
    [  --enable-seqcheck        add code to check particle sequence on repartition],
    enable_seqcheck=yes,
    enable_seqcheck=no)

AC_ARG_ENABLE(debug,
    [  --enable-debug                  compile with verbose output and debugging flags],
    enable_debug=yes,
    enable_debug=no)

AC_ARG_ENABLE(dmalloc,
    [  --enable-dmalloc                link in the dmalloc package for memory debugging],
    enable_dmalloc=yes,
    enable_dmalloc=no)


dnl Look for doxygen
AC_PATH_PROG(DOXYGEN, doxygen, notfound)
AM_CONDITIONAL(DOXYGEN_FOUND, test x$DOXYGEN != xnotfound)

dnl Checks for libraries.
dnl Replace 'main' with a function in -largs:
AC_CHECK_LIB(args, main)
dnl Replace 'main' with a function in -leigen:
AC_CHECK_LIB(eigen, main)
dnl Replace 'main' with a function in -lfft:
AC_CHECK_LIB(fft, main)
dnl Replace 'main' with a function in -lm:
AC_CHECK_LIB(m, main)
dnl Replace 'main' with a function in -lmpi:
AC_CHECK_LIB(mpi, main)
dnl Replace 'main' with a function in -lexputil:
AC_CHECK_LIB(exputil, main)
dnl Replace 'main' with a function in -lpthread:
AC_CHECK_LIB(pthread, main)
dnl Replace 'main' with a function in -lsrnd:
AC_CHECK_LIB(srnd, main)
dnl Replace 'main' with a function in -lstdc:
AC_CHECK_LIB(stdc, main)
dnl Replace 'main' with a function in -lt:
AC_CHECK_LIB(t, main)
dnl Replace 'main' with a function in -ltrillium:
AC_CHECK_LIB(trillium, main)
dnl Replace 'main' with a function in -ltstdio:
AC_CHECK_LIB(tstdio, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(malloc.h unistd.h mpi.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE

dnl Set variables for Makefile
AM_CONDITIONAL(ENABLE_SEQCHECK, test "$enable_seqcheck" = "yes")
AM_CONDITIONAL(ENABLE_DEBUG, test "$enable_debug" = "yes")
AM_CONDITIONAL(ENABLE_DMALLOC, test "$enable_dmalloc" = "yes")


dnl Make the makefiles
AC_OUTPUT(expgnu/Makefile exputil/Makefile src/Makefile Makefile doc/Makefile src/user/Makefile utils/Makefile utils/PhaseSpace/Makefile utils/SL/Makefile utils/Test/Makefile) # utils/gendisk/Makefile)

echo "----------------------------------------------------------------"
echo "Now type: "
echo ""
echo "    make"
echo ""
echo "or"
echo ""
echo "    make CXXFLAGS=\"-O3\" CFLAGS=\"-O3\""
echo ""
echo "to make the package for production work.  The default flags are"
echo "\"-g -O2\".  You may automatically install the executable and"
echo "libraries with the command:"
echo ""
echo "    make install prefix=/home/user"
echo ""
echo "----------------------------------------------------------------"
 
if test x$DOXYGEN != xnotfound; then
echo "The documentation will be in: doc/html.  You can make the"
echo "documentation before the compilation, if you like."
echo "----------------------------------------------------------------"
else
echo "You need the doxygen package to build the documentation."
echo "You can get this at http://www.stack.nl/~dimitri/doxygen"
echo "----------------------------------------------------------------"
fi
