dnl Process this file with autoconf to produce a configure script.
AC_INIT(gendisk/initial.cc)
AM_INIT_AUTOMAKE(ICs, 0.1)
AC_REVISION($Revision$)dnl

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_F77
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl Checks for libraries.
dnl Replace `main' with a function in -largs:
AC_CHECK_LIB(args, main)
dnl Replace `main' with a function in -lblas:
AC_CHECK_LIB(blas, main)
dnl Replace `main' with a function in -lcruft:
AC_CHECK_LIB(cruft, main)
dnl Replace `main' with a function in -lf2c:
AC_CHECK_LIB(f2c, main)
dnl Replace `main' with a function in -lfftw:
AC_CHECK_LIB(fftw, main)
dnl Replace `main' with a function in -lg:
AC_CHECK_LIB(g, main)
dnl Replace `main' with a function in -llapack:
AC_CHECK_LIB(lapack, main)
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, main)
dnl Replace `main' with a function in -lmdw:
AC_CHECK_LIB(mdw, main)
dnl Replace `main' with a function in -lmpi:
AC_CHECK_LIB(mpi, main)
dnl Replace `main' with a function in -lnumerical:
AC_CHECK_LIB(numerical, main)
dnl Replace `main' with a function in -lrfftw:
AC_CHECK_LIB(rfftw, main)
dnl Replace `main' with a function in -lt:
AC_CHECK_LIB(t, main)
dnl Replace `main' with a function in -ltrillium:
AC_CHECK_LIB(trillium, main)
dnl Replace `main' with a function in -ltstdio:
AC_CHECK_LIB(tstdio, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(strings.h sys/time.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.

AC_OUTPUT(Makefile gensph/Makefile gendisk/Makefile dfchk/Makefile)

